<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Gravity Game</string>
    <string name="select_a_level">Select a Level</string>
    
    <string name="main_menu_play">Play</string>
    <string name="main_menu_highscore">Highscores</string>
	<string name="main_menu_options">Options</string>
	<string name="main_menu_exit">Exit</string>
	
	<string name="options_tilt_mode">Tilt Mode</string>
	<string name="options_tilt_threshold">Tilt Thresholds</string>
	<string name="options_automatic_pause">Automatic Unpausing</string>
	<string name="options_automatic_pause_delay">Unpausing Delay</string>
	
	<string name="options_tilt_mode_expl">Enable tilt mode</string>
    <string name="options_tilt_threshold_expl">Define tilt thresholds</string>
    <string name="options_automatic_pause_expl">Use Automatic Unpausing</string>
    <string name="options_automatic_pause_delay_expl">Delay for Automatic Unpausing</string>
    <string name="options_pause_delay_sprinner_prompt">Choose unpausing delay</string>
    <string name="back_to_menu">Back to menu</string>
    <string name="back_to_level_select">Back to Level Select</string>
     <string name="back">Back</string>
     
    <string name="pause_menu_resume_game">Resume game</string>
    <string name="pause_menu_pan_map">Explore the level</string><string name="pause_menu_main_menu">Exit to main menu</string>
   <string name="levelFinishedMessage">Level complete!</string>
   <string name="highscore_popup_enter_name">Write your name:</string>
   <string name="highscore_popup_submit">Submit highscore!</string>
   
   <string name="autopause_message_text">AUTOPAUSED\ntap to resume</string>
   
   <string name="highscore_username"></string>
   <string name="highscore_flips">number of flips used:</string>
   <string name="highscore_collectibles">number of coins collected:</string>
   
   <string name="highscore_noscore">no-one has finished this level yet</string><string-array name="options_pause_delay_times">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>
   <string name="startup_message_text">Rotate your device to match the character, then tap the screen</string>
   
   
    
    
</resources>
