<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
	android:id="@+id/widget32"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:background="#FFFFFF"
	xmlns:android="http://schemas.android.com/apk/res/android" >
	
	
		
	<TableLayout
	android:id="@+id/widget28"
	android:layout_width="fill_parent"
	android:layout_height="wrap_content"
	android:orientation="vertical"
	android:layout_marginTop="20dp"
	android:layout_centerHorizontal="true"
	>
		<ImageView android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_centerHorizontal="true"
			android:layout_marginTop="20dp"
			android:layout_marginBottom="30dp"
			android:src="@drawable/logo" />
	
		<Button
		android:id="@+id/StartGame"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/main_menu_play"
		android:background="#333333"
		android:paddingTop="10dp"
		android:paddingBottom="10dp"
		android:layout_marginBottom="3dp"
		android:textColor="#FFFFFF" />
		
		<Button
		android:id="@+id/Highscore"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/main_menu_highscore"
		android:background="#333333"
		android:paddingTop="10dp"
		android:paddingBottom="10dp"
		android:layout_marginBottom="3dp"
		android:textColor="#FFFFFF" />
		
		<Button
		android:id="@+id/Options"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/main_menu_options"
		android:background="#333333"
		android:paddingTop="10dp"
		android:paddingBottom="10dp"
		android:layout_marginBottom="3dp"
		android:textColor="#FFFFFF" />
		
		<Button
		android:id="@+id/Exit"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/main_menu_exit"
		android:background="#333333"
		android:paddingTop="10dp"
		android:paddingBottom="10dp"
		android:textColor="#FFFFFF" />
		
	</TableLayout>
</RelativeLayout>